cambios generales slider
se agregraon nuevos cambios a la mayoria del codigo para realizar los
efectos deseados con el slider

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="assets/css/flexslider.css">
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/style.css">
-            <link rel="stylesheet" media="screen" href="css/assets/style slider.css" />
+            <link rel="stylesheet" media="screen" href="assets/css/style-slider.css" />
 
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -80,38 +80,71 @@
         </div>
 
         <!-- Slider -->
-        <div class="sequence-theme">
-            <div id="sequence">
+        <div class="slider">
+           <div class="container">
+        <div class="row">
+            <div class="span1">&nbsp;</div>
+            <div class="span10 sequence-theme">
+                  <div id="sequence">
 
-                <img class="sequence-prev" src="images/bt-prev.png" alt="Previous Frame" />
-                <img class="sequence-next" src="images/bt-next.png" alt="Next Frame" />
+                <img class="sequence-prev" src="assets/img/slider-text/bt-prev.png" alt="Previous Frame" />
+                <img class="sequence-next" src="assets/img/slider-text/bt-next.png" alt="Next Frame" />
 
-                <ul class="sequence-canvas">
+                <ul class="sequence-canvas slides">
                     <li class="animate-in">
-                        <h2 class="title">Built using Sequence.js</h2>
+                        <h2 class="title">The safest way to store and enjoy </h2>
                         <h3 class="subtitle">The Responsive Slider with Advanced CSS3 Transitions</h3>
-                        <img class="model" src="images/model1.jpg" alt="Model 1" />
+                        <img class="model" src="assets/img/slider-text/1.jpg" alt="Model 1" />
                     </li>
                     <li>
                         <h2 class="title">Creative Control</h2>
                         <h3 class="subtitle">Create unique sliders using CSS3 transitions</h3>
-                        <img class="model" src="images/model2.png" alt="Model 2" />
+                        <img class="model" src="assets/img/slider-text/2.jpg" alt="Model 2" />
                     </li>
                     <li>
                         <h2 class="title">Cutting Edge</h2>
                         <h3 class="subtitle">Supports modern browsers, old browsers (IE7+), touch devices and responsive designs</h3>
-                        <img class="model" src="images/model3.png" alt="Model 3" />
+                        <img class="model" src="assets/img/slider-text/3.jpg" alt="Model 3" />
+                    </li>
+                    <li class="animate-in">
+                        <h2 class="title">Built using Sequence.js</h2>
+                        <h3 class="subtitle">The Responsive Slider with Advanced CSS3 Transitions</h3>
+                        <img class="model" src="assets/img/slider-text/4.jpg" alt="Model 1" />
+                    </li>
+                    <li>
+                        <h2 class="title">Creative Control</h2>
+                        <h3 class="subtitle">Create unique sliders using CSS3 transitions</h3>
+                        <img class="model" src="assets/img/slider-text/5.jpg" alt="Model 2" />
+                    </li>
+                    <li>
+                        <h2 class="title">Cutting Edge</h2>
+                        <h3 class="subtitle">Supports modern browsers, old browsers (IE7+), touch devices and responsive designs</h3>
+                        <img class="model" src="assets/img/slider-text/6.jpg" alt="Model 3" />
+                    </li>
+                     <li>
+                        <h2 class="title">Creative Control</h2>
+                        <h3 class="subtitle">Create unique sliders using CSS3 transitions</h3>
+                        <img class="model" src="assets/img/slider-text/7.jpg" alt="Model 2" />
+                    </li>
+                    <li>
+                        <h2 class="title">Cutting Edge</h2>
+                        <h3 class="subtitle">Supports modern browsers, old browsers (IE7+), touch devices and responsive designs</h3>
+                        <img class="model" src="assets/img/slider-text/8.jpg" alt="Model 3" />
                     </li>
                 </ul>
 
-                <ul class="sequence-pagination">
-                    <li><img src="images/tn-model1.png" alt="Model 1" /></li>
-                    <li><img src="images/tn-model2.png" alt="Model 2" /></li>
-                    <li><img src="images/tn-model3.png" alt="Model 3" /></li>
+                <!-- <ul class="sequence-pagination">
+                    <li><img src="assets/img/slider-text/tn-model1.png" alt="Model 1" /></li>
+                    <li><img src="assets/img/slider-text/tn-model2.png" alt="Model 2" /></li>
+                    <li><img src="assets/img/slider-text/tn-model3.png" alt="Model 3" /></li>
                 </ul>
-
+-->
             </div>
+            </div>
+            <div class="span1">&nbsp;</div>
         </div>
+        </div> 
+ </div>
 
         <!-- Site Description -->
         <div class="presentation container">
@@ -257,6 +290,8 @@
         </footer>
 
         <!-- Javascript -->
+ 
+         <script src="assets/js/jquery-1.9.1.min.js"></script>
         <script src="assets/js/jquery-1.8.2.min.js"></script>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/jquery.flexslider.js"></script>
@@ -267,6 +302,9 @@
         <script src="assets/js/jquery.quicksand.js"></script>
         <script src="assets/prettyPhoto/js/jquery.prettyPhoto.js"></script>
         <script src="assets/js/scripts.js"></script>
+    
+        <script src="assets/js/jquery.sequence-min.js"></script>
+        <script src="assets/js/sequencejs-options.modern-slide-in.js"></script>
 
     </body>
 
